 31. New skill: Stoicism
 32. Pregnant people now get food addictions, and Addictions can now include resource name
 33. Amputation now works on corpses.
 34. Prop_*Adjusters now support ambiance+- arguments.
 35. New property: Prop_PropSetter, for potentially permanent object changes.
 36. Rituals now support TIMEOUT, INCLUDE and ASSIST tasks for cooperative magic!
 37. PROMPT now supports group size / max group members
 38. MG Journal browser now supports Journal Limit / pages.
 39. Decoration now supports hiding items in plain sight/semi-hidden.
 40. Quests can now suppress local laws while they are running. 
 41. Prop_ClosedDayNight can now generate near-closing greetings.
 42. MudChat now how syntax for adding marginal entries over the chat.dat entries.
 43. Loyalty will report itself when you the leader looks at the loyal follower.
 45. EXAMINE/LONGLOOK at mobs will now show wear positions like EQ LONG
 46. CATALOG now supports spawn caps, random (masked) room spawns, and mob spawns.

# Build 5.10.2 Release 4/28/2023
  *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
  1. GMODIFY can now affect Areas.
  2. New Races; Mustalids, Badger, Otter, Wolverine, Giant Otter, Dire Otter, Mustie
  3. Genders are now defined in lists.ini
  4. Socials update
  5. New Deviations features: mob power levels, sorting
  6. New Deviations button in the MUDGrinder map and room editors
  7. New Chants: Summon Squall
  8. Looking UP into a generated sky now gives some basic info.
  9. New Exit type: Skyway -- for supporting the above.
 10. New Achievement type: CHARITY
 11. New Disable flag: FATIGUE
 12. New skill: Await Clan Ship
 13. The "Know Plants" skill will now report on edible-ness.
 14. Some divination spells are now more mob-follower-friendly. (e.g. Find Directions)
 15. New Spell "Majesty", the effects of which can only be wished for.
 16. Prop_ShortEffects expanded to include remotely-cast effects also.