@@ -1832,9 +1832,9 @@ Example : nofollow\n\r\
 Example : nofollow my dog\n\r\
 Short(s): \n\r\
 When used without a parameter, this command toggles whether or not your \
-character will accept new followers.  When a name is specified, this command causes \
-a follower of that name to no longer follow you.  \
-See also REBUKE, GROUP, FOLLOW, FORMATION, ORDER, and GTELL.
+character will accept new followers or vassals.  When a name is specified, \
+this command causes a follower of that name to no longer follow you.  \
+See also REBUKE, GROUP, FOLLOW, FORMATION, SERVE, ORDER, and GTELL.
 
 NOMXP=\
 Command : NOMXP\n\r\
@@ -2063,19 +2063,17 @@ Valid embedded codes for custom prompts include:\n\r\
 ^HMISC:^N\n\r\
 %/ :  Begin/End combat-only section -- %\\ :  Begin/End non-combat sect.\n\r\
 %fFACTION NAME : Faction value as pct. %FfACTION NAME : Faction value as text\n\r\
-%-STAT NAME : Replace STAT NAME is one of the following: \n\r\
-  STRENGTH, INTELLIGENCE, WISDOM, etc..MAX STRENGTH, MAX INTELLIGENCE, etc..\n\r\
-  BASE STRENGTH, BASE INTELLIGENCE, etc..ATTACK, ARMOR, WEIGHT, HEIGHT\n\r\
-  LEVEL, HITS, MANA, MOVE, HUNGER, THIRST, FATIGUE, STINK, HEAD, NECK, TORSO,\n\r\
-  ARMS, LEFT WRIST, WIELD, EYES, etc..\n\r\
-^HCOLORS:^N\n\r\
+%<CONFIGFLAG   : Begin/end config sec. %-STAT NAME    : One of the following: \n\r\
+  STRENGTH, WISDOM, etc..MAX STRENGTH, etc.. BASE STRENGTH, etc.., ATTACK, \n\r\
+  ARMOR, WEIGHT, HEIGHT, LEVEL, HITS, MANA, MOVE, HUNGER, THIRST, FATIGUE, \n\r\
+  STINK, HEAD, NECK, TORSO, ARMS, LEFT WRIST, WIELD, EYES, etc..\n\r\
+^HCOLORS:^N               ^P^^P :  Dark Purple      ^p^^p :  Light purple\n\r\
 ^h^^h :  Hit point color  ^m^^m :  Mana color       ^v^^v :  Movement color \n\r\
 ^N^^N :  Normal color     ^N^^? :  Previous color   ^W^^W :  Grey\n\r\
 ^w^^w :  White            ^g^^g :  Light green      ^G^^G :  Dark Green\n\r\
 ^b^^b :  Light blue       ^B^^B :  Dark Blue        ^r^^r :  Light red\n\r\
 ^R^^R :  Maroon           ^y^^y :  Yellow           ^Y^^Y :  Dark yellow\n\r\
-^c^^c :  Cyan             ^C^^C :  Dark Cyan        ^p^^p :  Light purple\n\r\
-^P^^P :  Dark Purple\n\r\
+^c^^c :  Cyan             ^C^^C :  Dark Cyan        \n\r\
 ^N-----
 
 DRAG=PULL
@@ -2361,12 +2359,14 @@ Usage   : SERVE [MOB NAME]\n\r\
 Example : serve king of the hobgoblins\n\r\
 Short(s): \n\r\
 Allows your character to be placed in the service of another \
-mob or character in the same room, who may order the vassal.  \
-A player may only serve one liege at a time.  A liege will receive 10% of \
-all of your combat or thief skill experience gains, which should encourage lieges \
-to help them out.  The REBUKE command is used by either party to \
-end this relationship.  REBUKE is also used to stop worshipping \
-a deity. See also the VASSALS command.
+mob or character in the same room who is accepting new vassals, becoming their liege.  \
+A player may only serve one liege at a time.  A liege may \
+give orders to vassals, and will receive a small portion of \
+all of their vassals combat or thief skill experience gains, \
+which should encourage lieges to help them out.  The REBUKE \
+command is used by either party to end this relationship.  \
+REBUKE is also used to stop worshipping a deity. \
+See also the VASSALS command, and the NOFOLLOW command.
 
 SHEATH=\
 Command : SHEATH\n\r\
